tests/ui/parser/issues/issue-87812.stderr
error: this labeled break expression is easy to confuse with an unlabeled break with a labeled value expression
  --> $DIR/issue-87812.rs:6:13
   |
LL |             break '_l $f;
   |             ^^^^^^^^^^^^
...
LL |     let x = foo!({ 3 });
   |             ----------- in this macro invocation
   |
note: the lint level is defined here
  --> $DIR/issue-87812.rs:1:9
   |
LL | #![deny(break_with_label_and_loop)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)
help: wrap this expression in parentheses
   |
LL |             break '_l ($f);
   |                       +  +

error: aborting due to previous error

